synlib/grammar/y.output
State 76 conflicts: 3 shift/reduce
State 77 conflicts: 3 shift/reduce
State 78 conflicts: 3 shift/reduce


Grammar

    0 $accept: libraries $end

    1 libraries: libraries Library
    2          | Library

    3 Library: library '(' tuken ')' '{' Items '}'

    4 Items: Items Item
    5      | Item

    6 Item: Cell
    7     | Pair

    8 Token: token

    9 String: string

   10 Number: number

   11 Floating: floating

   12 tuken: Token
   13      | String

   14 Pair: Token ':' Expr ';'
   15     | Token ':' Number Token ';'
   16     | Token '(' Expr ')' ';'
   17     | Token '(' Expr ',' Expr ')' ';'
   18     | Token '(' Expr ',' Expr ')'
   19     | Token '(' Expr ',' Expr ',' Expr ')' ';'
   20     | Token '(' Expr ')' '{' Pairs '}'
   21     | Token '(' ')' '{' Pairs '}'
   22     | values '(' Values ')' ';'
   23     | values ':' Values ';'
   24     | values '(' Values ')'

   25 Pairs: Pairs Pair
   26      | Pair

   27 toks: toks ',' Token
   28     | Token

   29 Exprs: Expr ',' Expr
   30      | Expr

   31 Value: String
   32      | Floating
   33      | Number

   34 Values: Values ',' Value
   35       | Value

   36 Expr: ff
   37     | Token
   38     | Number
   39     | String
   40     | Floating
   41     | library
   42     | cell
   43     | pin
   44     | timing
   45     | Expr '*' Expr
   46     | Expr '+' Expr
   47     | '-' Floating
   48     | Expr '-' Expr
   49     | '-' Number
   50     | '!' Token
   51     | values

   52 Cell: cell '(' tuken ')' '{' cell_items '}'

   53 cell_items: cell_items cell_item
   54           | cell_item

   55 cell_item: Pair
   56          | Bus
   57          | Pin
   58          | Ff
   59          | Statetable
   60          | Latch
   61          | Test_cell

   62 test_cell_item: Pin
   63               | Ff
   64               | Latch

   65 test_cell_items: test_cell_items test_cell_item
   66                | test_cell_item

   67 Pin: pin '(' tuken ')' '{' pin_items '}'
   68    | pin '(' Token ',' Token ')' '{' pin_items '}'
   69    | pin '(' Token ',' Token ',' Token ')' '{' pin_items '}'

   70 pin_items: pin_items pin_item
   71          | pin_item

   72 pin_item: Pair
   73         | Timing

   74 Ff: ff '(' toks ')' '{' Pairs '}'

   75 Statetable: statetable '(' Exprs ')' '{' Pairs '}'

   76 Latch: latch '(' toks ')' '{' Pairs '}'

   77 Test_cell: test_cell '(' ')' '{' test_cell_items '}'

   78 Timing: timing '(' ')' '{' timing_items '}'

   79 timing_items: timing_items timing_item
   80             | timing_item

   81 timing_item: Pair

   82 Bus: bus '(' tuken ')' '{' bus_items '}'

   83 bus_items: bus_items bus_item
   84          | bus_item

   85 bus_item: Pair
   86         | Timing
   87         | Bpin

   88 Bpin: pin '(' tuken '[' Number ':' Number ']' ')' '{' '}'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 50
'(' (40) 3 16 17 18 19 20 21 22 24 52 67 68 69 74 75 76 77 78 82 88
')' (41) 3 16 17 18 19 20 21 22 24 52 67 68 69 74 75 76 77 78 82 88
'*' (42) 45
'+' (43) 46
',' (44) 17 18 19 27 29 34 68 69
'-' (45) 47 48 49
':' (58) 14 15 23 88
';' (59) 14 15 16 17 19 22 23
'[' (91) 88
']' (93) 88
'{' (123) 3 20 21 52 67 68 69 74 75 76 77 78 82 88
'}' (125) 3 20 21 52 67 68 69 74 75 76 77 78 82 88
error (256)
library (258) 3 41
cell (259) 42 52
pin (260) 43 67 68 69 88
timing (261) 44 78
bus (262) 82
token (263) 8
number (264) 10
string (265) 9
floating (266) 11
statetable (267) 75
ff (268) 36 74
latch (269) 76
test_cell (270) 77
values (271) 22 23 24 51


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
libraries (31)
    on left: 1 2, on right: 0 1
Library (32)
    on left: 3, on right: 1 2
Items (33)
    on left: 4 5, on right: 3 4
Item (34)
    on left: 6 7, on right: 4 5
Token (35)
    on left: 8, on right: 12 14 15 16 17 18 19 20 21 27 28 37 50 68
    69
String (36)
    on left: 9, on right: 13 31 39
Number (37)
    on left: 10, on right: 15 33 38 49 88
Floating (38)
    on left: 11, on right: 32 40 47
tuken (39)
    on left: 12 13, on right: 3 52 67 82 88
Pair (40)
    on left: 14 15 16 17 18 19 20 21 22 23 24, on right: 7 25 26 55
    72 81 85
Pairs (41)
    on left: 25 26, on right: 20 21 25 74 75 76
toks (42)
    on left: 27 28, on right: 27 74 76
Exprs (43)
    on left: 29 30, on right: 75
Value (44)
    on left: 31 32 33, on right: 34 35
Values (45)
    on left: 34 35, on right: 22 23 24 34
Expr (46)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51,
    on right: 14 16 17 18 19 20 29 30 45 46 48
Cell (47)
    on left: 52, on right: 6
cell_items (48)
    on left: 53 54, on right: 52 53
cell_item (49)
    on left: 55 56 57 58 59 60 61, on right: 53 54
test_cell_item (50)
    on left: 62 63 64, on right: 65 66
test_cell_items (51)
    on left: 65 66, on right: 65 77
Pin (52)
    on left: 67 68 69, on right: 57 62
pin_items (53)
    on left: 70 71, on right: 67 68 69 70
pin_item (54)
    on left: 72 73, on right: 70 71
Ff (55)
    on left: 74, on right: 58 63
Statetable (56)
    on left: 75, on right: 59
Latch (57)
    on left: 76, on right: 60 64
Test_cell (58)
    on left: 77, on right: 61
Timing (59)
    on left: 78, on right: 73 86
timing_items (60)
    on left: 79 80, on right: 78 79
timing_item (61)
    on left: 81, on right: 79 80
Bus (62)
    on left: 82, on right: 56
bus_items (63)
    on left: 83 84, on right: 82 83
bus_item (64)
    on left: 85 86 87, on right: 83 84
Bpin (65)
    on left: 88, on right: 87


state 0

    0 $accept: . libraries $end

    library  shift, and go to state 1

    libraries  go to state 2
    Library    go to state 3


state 1

    3 Library: library . '(' tuken ')' '{' Items '}'

    '('  shift, and go to state 4


state 2

    0 $accept: libraries . $end
    1 libraries: libraries . Library

    $end     shift, and go to state 5
    library  shift, and go to state 1

    Library  go to state 6


state 3

    2 libraries: Library .

    $default  reduce using rule 2 (libraries)


state 4

    3 Library: library '(' . tuken ')' '{' Items '}'

    token   shift, and go to state 7
    string  shift, and go to state 8

    Token   go to state 9
    String  go to state 10
    tuken   go to state 11


state 5

    0 $accept: libraries $end .

    $default  accept


state 6

    1 libraries: libraries Library .

    $default  reduce using rule 1 (libraries)


state 7

    8 Token: token .

    $default  reduce using rule 8 (Token)


state 8

    9 String: string .

    $default  reduce using rule 9 (String)


state 9

   12 tuken: Token .

    $default  reduce using rule 12 (tuken)


state 10

   13 tuken: String .

    $default  reduce using rule 13 (tuken)


state 11

    3 Library: library '(' tuken . ')' '{' Items '}'

    ')'  shift, and go to state 12


state 12

    3 Library: library '(' tuken ')' . '{' Items '}'

    '{'  shift, and go to state 13


state 13

    3 Library: library '(' tuken ')' '{' . Items '}'

    cell    shift, and go to state 14
    token   shift, and go to state 7
    values  shift, and go to state 15

    Items  go to state 16
    Item   go to state 17
    Token  go to state 18
    Pair   go to state 19
    Cell   go to state 20


state 14

   52 Cell: cell . '(' tuken ')' '{' cell_items '}'

    '('  shift, and go to state 21


state 15

   22 Pair: values . '(' Values ')' ';'
   23     | values . ':' Values ';'
   24     | values . '(' Values ')'

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


state 16

    3 Library: library '(' tuken ')' '{' Items . '}'
    4 Items: Items . Item

    cell    shift, and go to state 14
    token   shift, and go to state 7
    values  shift, and go to state 15
    '}'     shift, and go to state 24

    Item   go to state 25
    Token  go to state 18
    Pair   go to state 19
    Cell   go to state 20


state 17

    5 Items: Item .

    $default  reduce using rule 5 (Items)


state 18

   14 Pair: Token . ':' Expr ';'
   15     | Token . ':' Number Token ';'
   16     | Token . '(' Expr ')' ';'
   17     | Token . '(' Expr ',' Expr ')' ';'
   18     | Token . '(' Expr ',' Expr ')'
   19     | Token . '(' Expr ',' Expr ',' Expr ')' ';'
   20     | Token . '(' Expr ')' '{' Pairs '}'
   21     | Token . '(' ')' '{' Pairs '}'

    '('  shift, and go to state 26
    ':'  shift, and go to state 27


state 19

    7 Item: Pair .

    $default  reduce using rule 7 (Item)


state 20

    6 Item: Cell .

    $default  reduce using rule 6 (Item)


state 21

   52 Cell: cell '(' . tuken ')' '{' cell_items '}'

    token   shift, and go to state 7
    string  shift, and go to state 8

    Token   go to state 9
    String  go to state 10
    tuken   go to state 28


state 22

   22 Pair: values '(' . Values ')' ';'
   24     | values '(' . Values ')'

    number    shift, and go to state 29
    string    shift, and go to state 8
    floating  shift, and go to state 30

    String    go to state 31
    Number    go to state 32
    Floating  go to state 33
    Value     go to state 34
    Values    go to state 35


state 23

   23 Pair: values ':' . Values ';'

    number    shift, and go to state 29
    string    shift, and go to state 8
    floating  shift, and go to state 30

    String    go to state 31
    Number    go to state 32
    Floating  go to state 33
    Value     go to state 34
    Values    go to state 36


state 24

    3 Library: library '(' tuken ')' '{' Items '}' .

    $default  reduce using rule 3 (Library)


state 25

    4 Items: Items Item .

    $default  reduce using rule 4 (Items)


state 26

   16 Pair: Token '(' . Expr ')' ';'
   17     | Token '(' . Expr ',' Expr ')' ';'
   18     | Token '(' . Expr ',' Expr ')'
   19     | Token '(' . Expr ',' Expr ',' Expr ')' ';'
   20     | Token '(' . Expr ')' '{' Pairs '}'
   21     | Token '(' . ')' '{' Pairs '}'

    library   shift, and go to state 37
    cell      shift, and go to state 38
    pin       shift, and go to state 39
    timing    shift, and go to state 40
    token     shift, and go to state 7
    number    shift, and go to state 29
    string    shift, and go to state 8
    floating  shift, and go to state 30
    ff        shift, and go to state 41
    values    shift, and go to state 42
    ')'       shift, and go to state 43
    '-'       shift, and go to state 44
    '!'       shift, and go to state 45

    Token     go to state 46
    String    go to state 47
    Number    go to state 48
    Floating  go to state 49
    Expr      go to state 50


state 27

   14 Pair: Token ':' . Expr ';'
   15     | Token ':' . Number Token ';'

    library   shift, and go to state 37
    cell      shift, and go to state 38
    pin       shift, and go to state 39
    timing    shift, and go to state 40
    token     shift, and go to state 7
    number    shift, and go to state 29
    string    shift, and go to state 8
    floating  shift, and go to state 30
    ff        shift, and go to state 41
    values    shift, and go to state 42
    '-'       shift, and go to state 44
    '!'       shift, and go to state 45

    Token     go to state 46
    String    go to state 47
    Number    go to state 51
    Floating  go to state 49
    Expr      go to state 52


state 28

   52 Cell: cell '(' tuken . ')' '{' cell_items '}'

    ')'  shift, and go to state 53


state 29

   10 Number: number .

    $default  reduce using rule 10 (Number)


state 30

   11 Floating: floating .

    $default  reduce using rule 11 (Floating)


state 31

   31 Value: String .

    $default  reduce using rule 31 (Value)


state 32

   33 Value: Number .

    $default  reduce using rule 33 (Value)


state 33

   32 Value: Floating .

    $default  reduce using rule 32 (Value)


state 34

   35 Values: Value .

    $default  reduce using rule 35 (Values)


state 35

   22 Pair: values '(' Values . ')' ';'
   24     | values '(' Values . ')'
   34 Values: Values . ',' Value

    ')'  shift, and go to state 54
    ','  shift, and go to state 55


state 36

   23 Pair: values ':' Values . ';'
   34 Values: Values . ',' Value

    ';'  shift, and go to state 56
    ','  shift, and go to state 55


state 37

   41 Expr: library .

    $default  reduce using rule 41 (Expr)


state 38

   42 Expr: cell .

    $default  reduce using rule 42 (Expr)


state 39

   43 Expr: pin .

    $default  reduce using rule 43 (Expr)


state 40

   44 Expr: timing .

    $default  reduce using rule 44 (Expr)


state 41

   36 Expr: ff .

    $default  reduce using rule 36 (Expr)


state 42

   51 Expr: values .

    $default  reduce using rule 51 (Expr)


state 43

   21 Pair: Token '(' ')' . '{' Pairs '}'

    '{'  shift, and go to state 57


state 44

   47 Expr: '-' . Floating
   49     | '-' . Number

    number    shift, and go to state 29
    floating  shift, and go to state 30

    Number    go to state 58
    Floating  go to state 59


state 45

   50 Expr: '!' . Token

    token  shift, and go to state 7

    Token  go to state 60


state 46

   37 Expr: Token .

    $default  reduce using rule 37 (Expr)


state 47

   39 Expr: String .

    $default  reduce using rule 39 (Expr)


state 48

   38 Expr: Number .

    $default  reduce using rule 38 (Expr)


state 49

   40 Expr: Floating .

    $default  reduce using rule 40 (Expr)


state 50

   16 Pair: Token '(' Expr . ')' ';'
   17     | Token '(' Expr . ',' Expr ')' ';'
   18     | Token '(' Expr . ',' Expr ')'
   19     | Token '(' Expr . ',' Expr ',' Expr ')' ';'
   20     | Token '(' Expr . ')' '{' Pairs '}'
   45 Expr: Expr . '*' Expr
   46     | Expr . '+' Expr
   48     | Expr . '-' Expr

    ')'  shift, and go to state 61
    ','  shift, and go to state 62
    '*'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65


state 51

   15 Pair: Token ':' Number . Token ';'
   38 Expr: Number .

    token  shift, and go to state 7

    $default  reduce using rule 38 (Expr)

    Token  go to state 66


state 52

   14 Pair: Token ':' Expr . ';'
   45 Expr: Expr . '*' Expr
   46     | Expr . '+' Expr
   48     | Expr . '-' Expr

    ';'  shift, and go to state 67
    '*'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65


state 53

   52 Cell: cell '(' tuken ')' . '{' cell_items '}'

    '{'  shift, and go to state 68


state 54

   22 Pair: values '(' Values ')' . ';'
   24     | values '(' Values ')' .

    ';'  shift, and go to state 69

    $default  reduce using rule 24 (Pair)


state 55

   34 Values: Values ',' . Value

    number    shift, and go to state 29
    string    shift, and go to state 8
    floating  shift, and go to state 30

    String    go to state 31
    Number    go to state 32
    Floating  go to state 33
    Value     go to state 70


state 56

   23 Pair: values ':' Values ';' .

    $default  reduce using rule 23 (Pair)


state 57

   21 Pair: Token '(' ')' '{' . Pairs '}'

    token   shift, and go to state 7
    values  shift, and go to state 15

    Token  go to state 18
    Pair   go to state 71
    Pairs  go to state 72


state 58

   49 Expr: '-' Number .

    $default  reduce using rule 49 (Expr)


state 59

   47 Expr: '-' Floating .

    $default  reduce using rule 47 (Expr)


state 60

   50 Expr: '!' Token .

    $default  reduce using rule 50 (Expr)


state 61

   16 Pair: Token '(' Expr ')' . ';'
   20     | Token '(' Expr ')' . '{' Pairs '}'

    '{'  shift, and go to state 73
    ';'  shift, and go to state 74


state 62

   17 Pair: Token '(' Expr ',' . Expr ')' ';'
   18     | Token '(' Expr ',' . Expr ')'
   19     | Token '(' Expr ',' . Expr ',' Expr ')' ';'

    library   shift, and go to state 37
    cell      shift, and go to state 38
    pin       shift, and go to state 39
    timing    shift, and go to state 40
    token     shift, and go to state 7
    number    shift, and go to state 29
    string    shift, and go to state 8
    floating  shift, and go to state 30
    ff        shift, and go to state 41
    values    shift, and go to state 42
    '-'       shift, and go to state 44
    '!'       shift, and go to state 45

    Token     go to state 46
    String    go to state 47
    Number    go to state 48
    Floating  go to state 49
    Expr      go to state 75


state 63

   45 Expr: Expr '*' . Expr

    library   shift, and go to state 37
    cell      shift, and go to state 38
    pin       shift, and go to state 39
    timing    shift, and go to state 40
    token     shift, and go to state 7
    number    shift, and go to state 29
    string    shift, and go to state 8
    floating  shift, and go to state 30
    ff        shift, and go to state 41
    values    shift, and go to state 42
    '-'       shift, and go to state 44
    '!'       shift, and go to state 45

    Token     go to state 46
    String    go to state 47
    Number    go to state 48
    Floating  go to state 49
    Expr      go to state 76


state 64

   46 Expr: Expr '+' . Expr

    library   shift, and go to state 37
    cell      shift, and go to state 38
    pin       shift, and go to state 39
    timing    shift, and go to state 40
    token     shift, and go to state 7
    number    shift, and go to state 29
    string    shift, and go to state 8
    floating  shift, and go to state 30
    ff        shift, and go to state 41
    values    shift, and go to state 42
    '-'       shift, and go to state 44
    '!'       shift, and go to state 45

    Token     go to state 46
    String    go to state 47
    Number    go to state 48
    Floating  go to state 49
    Expr      go to state 77


state 65

   48 Expr: Expr '-' . Expr

    library   shift, and go to state 37
    cell      shift, and go to state 38
    pin       shift, and go to state 39
    timing    shift, and go to state 40
    token     shift, and go to state 7
    number    shift, and go to state 29
    string    shift, and go to state 8
    floating  shift, and go to state 30
    ff        shift, and go to state 41
    values    shift, and go to state 42
    '-'       shift, and go to state 44
    '!'       shift, and go to state 45

    Token     go to state 46
    String    go to state 47
    Number    go to state 48
    Floating  go to state 49
    Expr      go to state 78


state 66

   15 Pair: Token ':' Number Token . ';'

    ';'  shift, and go to state 79


state 67

   14 Pair: Token ':' Expr ';' .

    $default  reduce using rule 14 (Pair)


state 68

   52 Cell: cell '(' tuken ')' '{' . cell_items '}'

    pin         shift, and go to state 80
    bus         shift, and go to state 81
    token       shift, and go to state 7
    statetable  shift, and go to state 82
    ff          shift, and go to state 83
    latch       shift, and go to state 84
    test_cell   shift, and go to state 85
    values      shift, and go to state 15

    Token       go to state 18
    Pair        go to state 86
    cell_items  go to state 87
    cell_item   go to state 88
    Pin         go to state 89
    Ff          go to state 90
    Statetable  go to state 91
    Latch       go to state 92
    Test_cell   go to state 93
    Bus         go to state 94


state 69

   22 Pair: values '(' Values ')' ';' .

    $default  reduce using rule 22 (Pair)


state 70

   34 Values: Values ',' Value .

    $default  reduce using rule 34 (Values)


state 71

   26 Pairs: Pair .

    $default  reduce using rule 26 (Pairs)


state 72

   21 Pair: Token '(' ')' '{' Pairs . '}'
   25 Pairs: Pairs . Pair

    token   shift, and go to state 7
    values  shift, and go to state 15
    '}'     shift, and go to state 95

    Token  go to state 18
    Pair   go to state 96


state 73

   20 Pair: Token '(' Expr ')' '{' . Pairs '}'

    token   shift, and go to state 7
    values  shift, and go to state 15

    Token  go to state 18
    Pair   go to state 71
    Pairs  go to state 97


state 74

   16 Pair: Token '(' Expr ')' ';' .

    $default  reduce using rule 16 (Pair)


state 75

   17 Pair: Token '(' Expr ',' Expr . ')' ';'
   18     | Token '(' Expr ',' Expr . ')'
   19     | Token '(' Expr ',' Expr . ',' Expr ')' ';'
   45 Expr: Expr . '*' Expr
   46     | Expr . '+' Expr
   48     | Expr . '-' Expr

    ')'  shift, and go to state 98
    ','  shift, and go to state 99
    '*'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65


state 76

   45 Expr: Expr . '*' Expr
   45     | Expr '*' Expr .
   46     | Expr . '+' Expr
   48     | Expr . '-' Expr

    '*'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65

    '*'       [reduce using rule 45 (Expr)]
    '+'       [reduce using rule 45 (Expr)]
    '-'       [reduce using rule 45 (Expr)]
    $default  reduce using rule 45 (Expr)


state 77

   45 Expr: Expr . '*' Expr
   46     | Expr . '+' Expr
   46     | Expr '+' Expr .
   48     | Expr . '-' Expr

    '*'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65

    '*'       [reduce using rule 46 (Expr)]
    '+'       [reduce using rule 46 (Expr)]
    '-'       [reduce using rule 46 (Expr)]
    $default  reduce using rule 46 (Expr)


state 78

   45 Expr: Expr . '*' Expr
   46     | Expr . '+' Expr
   48     | Expr . '-' Expr
   48     | Expr '-' Expr .

    '*'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65

    '*'       [reduce using rule 48 (Expr)]
    '+'       [reduce using rule 48 (Expr)]
    '-'       [reduce using rule 48 (Expr)]
    $default  reduce using rule 48 (Expr)


state 79

   15 Pair: Token ':' Number Token ';' .

    $default  reduce using rule 15 (Pair)


state 80

   67 Pin: pin . '(' tuken ')' '{' pin_items '}'
   68    | pin . '(' Token ',' Token ')' '{' pin_items '}'
   69    | pin . '(' Token ',' Token ',' Token ')' '{' pin_items '}'

    '('  shift, and go to state 100


state 81

   82 Bus: bus . '(' tuken ')' '{' bus_items '}'

    '('  shift, and go to state 101


state 82

   75 Statetable: statetable . '(' Exprs ')' '{' Pairs '}'

    '('  shift, and go to state 102


state 83

   74 Ff: ff . '(' toks ')' '{' Pairs '}'

    '('  shift, and go to state 103


state 84

   76 Latch: latch . '(' toks ')' '{' Pairs '}'

    '('  shift, and go to state 104


state 85

   77 Test_cell: test_cell . '(' ')' '{' test_cell_items '}'

    '('  shift, and go to state 105


state 86

   55 cell_item: Pair .

    $default  reduce using rule 55 (cell_item)


state 87

   52 Cell: cell '(' tuken ')' '{' cell_items . '}'
   53 cell_items: cell_items . cell_item

    pin         shift, and go to state 80
    bus         shift, and go to state 81
    token       shift, and go to state 7
    statetable  shift, and go to state 82
    ff          shift, and go to state 83
    latch       shift, and go to state 84
    test_cell   shift, and go to state 85
    values      shift, and go to state 15
    '}'         shift, and go to state 106

    Token       go to state 18
    Pair        go to state 86
    cell_item   go to state 107
    Pin         go to state 89
    Ff          go to state 90
    Statetable  go to state 91
    Latch       go to state 92
    Test_cell   go to state 93
    Bus         go to state 94


state 88

   54 cell_items: cell_item .

    $default  reduce using rule 54 (cell_items)


state 89

   57 cell_item: Pin .

    $default  reduce using rule 57 (cell_item)


state 90

   58 cell_item: Ff .

    $default  reduce using rule 58 (cell_item)


state 91

   59 cell_item: Statetable .

    $default  reduce using rule 59 (cell_item)


state 92

   60 cell_item: Latch .

    $default  reduce using rule 60 (cell_item)


state 93

   61 cell_item: Test_cell .

    $default  reduce using rule 61 (cell_item)


state 94

   56 cell_item: Bus .

    $default  reduce using rule 56 (cell_item)


state 95

   21 Pair: Token '(' ')' '{' Pairs '}' .

    $default  reduce using rule 21 (Pair)


state 96

   25 Pairs: Pairs Pair .

    $default  reduce using rule 25 (Pairs)


state 97

   20 Pair: Token '(' Expr ')' '{' Pairs . '}'
   25 Pairs: Pairs . Pair

    token   shift, and go to state 7
    values  shift, and go to state 15
    '}'     shift, and go to state 108

    Token  go to state 18
    Pair   go to state 96


state 98

   17 Pair: Token '(' Expr ',' Expr ')' . ';'
   18     | Token '(' Expr ',' Expr ')' .

    ';'  shift, and go to state 109

    $default  reduce using rule 18 (Pair)


state 99

   19 Pair: Token '(' Expr ',' Expr ',' . Expr ')' ';'

    library   shift, and go to state 37
    cell      shift, and go to state 38
    pin       shift, and go to state 39
    timing    shift, and go to state 40
    token     shift, and go to state 7
    number    shift, and go to state 29
    string    shift, and go to state 8
    floating  shift, and go to state 30
    ff        shift, and go to state 41
    values    shift, and go to state 42
    '-'       shift, and go to state 44
    '!'       shift, and go to state 45

    Token     go to state 46
    String    go to state 47
    Number    go to state 48
    Floating  go to state 49
    Expr      go to state 110


state 100

   67 Pin: pin '(' . tuken ')' '{' pin_items '}'
   68    | pin '(' . Token ',' Token ')' '{' pin_items '}'
   69    | pin '(' . Token ',' Token ',' Token ')' '{' pin_items '}'

    token   shift, and go to state 7
    string  shift, and go to state 8

    Token   go to state 111
    String  go to state 10
    tuken   go to state 112


state 101

   82 Bus: bus '(' . tuken ')' '{' bus_items '}'

    token   shift, and go to state 7
    string  shift, and go to state 8

    Token   go to state 9
    String  go to state 10
    tuken   go to state 113


state 102

   75 Statetable: statetable '(' . Exprs ')' '{' Pairs '}'

    library   shift, and go to state 37
    cell      shift, and go to state 38
    pin       shift, and go to state 39
    timing    shift, and go to state 40
    token     shift, and go to state 7
    number    shift, and go to state 29
    string    shift, and go to state 8
    floating  shift, and go to state 30
    ff        shift, and go to state 41
    values    shift, and go to state 42
    '-'       shift, and go to state 44
    '!'       shift, and go to state 45

    Token     go to state 46
    String    go to state 47
    Number    go to state 48
    Floating  go to state 49
    Exprs     go to state 114
    Expr      go to state 115


state 103

   74 Ff: ff '(' . toks ')' '{' Pairs '}'

    token  shift, and go to state 7

    Token  go to state 116
    toks   go to state 117


state 104

   76 Latch: latch '(' . toks ')' '{' Pairs '}'

    token  shift, and go to state 7

    Token  go to state 116
    toks   go to state 118


state 105

   77 Test_cell: test_cell '(' . ')' '{' test_cell_items '}'

    ')'  shift, and go to state 119


state 106

   52 Cell: cell '(' tuken ')' '{' cell_items '}' .

    $default  reduce using rule 52 (Cell)


state 107

   53 cell_items: cell_items cell_item .

    $default  reduce using rule 53 (cell_items)


state 108

   20 Pair: Token '(' Expr ')' '{' Pairs '}' .

    $default  reduce using rule 20 (Pair)


state 109

   17 Pair: Token '(' Expr ',' Expr ')' ';' .

    $default  reduce using rule 17 (Pair)


state 110

   19 Pair: Token '(' Expr ',' Expr ',' Expr . ')' ';'
   45 Expr: Expr . '*' Expr
   46     | Expr . '+' Expr
   48     | Expr . '-' Expr

    ')'  shift, and go to state 120
    '*'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65


state 111

   12 tuken: Token .
   68 Pin: pin '(' Token . ',' Token ')' '{' pin_items '}'
   69    | pin '(' Token . ',' Token ',' Token ')' '{' pin_items '}'

    ','  shift, and go to state 121

    $default  reduce using rule 12 (tuken)


state 112

   67 Pin: pin '(' tuken . ')' '{' pin_items '}'

    ')'  shift, and go to state 122


state 113

   82 Bus: bus '(' tuken . ')' '{' bus_items '}'

    ')'  shift, and go to state 123


state 114

   75 Statetable: statetable '(' Exprs . ')' '{' Pairs '}'

    ')'  shift, and go to state 124


state 115

   29 Exprs: Expr . ',' Expr
   30      | Expr .
   45 Expr: Expr . '*' Expr
   46     | Expr . '+' Expr
   48     | Expr . '-' Expr

    ','  shift, and go to state 125
    '*'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65

    $default  reduce using rule 30 (Exprs)


state 116

   28 toks: Token .

    $default  reduce using rule 28 (toks)


state 117

   27 toks: toks . ',' Token
   74 Ff: ff '(' toks . ')' '{' Pairs '}'

    ')'  shift, and go to state 126
    ','  shift, and go to state 127


state 118

   27 toks: toks . ',' Token
   76 Latch: latch '(' toks . ')' '{' Pairs '}'

    ')'  shift, and go to state 128
    ','  shift, and go to state 127


state 119

   77 Test_cell: test_cell '(' ')' . '{' test_cell_items '}'

    '{'  shift, and go to state 129


state 120

   19 Pair: Token '(' Expr ',' Expr ',' Expr ')' . ';'

    ';'  shift, and go to state 130


state 121

   68 Pin: pin '(' Token ',' . Token ')' '{' pin_items '}'
   69    | pin '(' Token ',' . Token ',' Token ')' '{' pin_items '}'

    token  shift, and go to state 7

    Token  go to state 131


state 122

   67 Pin: pin '(' tuken ')' . '{' pin_items '}'

    '{'  shift, and go to state 132


state 123

   82 Bus: bus '(' tuken ')' . '{' bus_items '}'

    '{'  shift, and go to state 133


state 124

   75 Statetable: statetable '(' Exprs ')' . '{' Pairs '}'

    '{'  shift, and go to state 134


state 125

   29 Exprs: Expr ',' . Expr

    library   shift, and go to state 37
    cell      shift, and go to state 38
    pin       shift, and go to state 39
    timing    shift, and go to state 40
    token     shift, and go to state 7
    number    shift, and go to state 29
    string    shift, and go to state 8
    floating  shift, and go to state 30
    ff        shift, and go to state 41
    values    shift, and go to state 42
    '-'       shift, and go to state 44
    '!'       shift, and go to state 45

    Token     go to state 46
    String    go to state 47
    Number    go to state 48
    Floating  go to state 49
    Expr      go to state 135


state 126

   74 Ff: ff '(' toks ')' . '{' Pairs '}'

    '{'  shift, and go to state 136


state 127

   27 toks: toks ',' . Token

    token  shift, and go to state 7

    Token  go to state 137


state 128

   76 Latch: latch '(' toks ')' . '{' Pairs '}'

    '{'  shift, and go to state 138


state 129

   77 Test_cell: test_cell '(' ')' '{' . test_cell_items '}'

    pin    shift, and go to state 80
    ff     shift, and go to state 83
    latch  shift, and go to state 84

    test_cell_item   go to state 139
    test_cell_items  go to state 140
    Pin              go to state 141
    Ff               go to state 142
    Latch            go to state 143


state 130
